add unit test for method showByRole, showByUsername, refactor code